_archive/radarr/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:filmstrip
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Movie Management
    gethomepage.dev/group: Media
    gethomepage.dev/icon: mdi-filmstrip
    gethomepage.dev/name: radarr
    gethomepage.dev/widget.type: radarr
    gethomepage.dev/widget.key: "${HOMEPAGE_VAR_RADARR_KEY}"
    gethomepage.dev/widget.url: http://radarr.media.svc.cluster.local:80
    gethomepage.dev/siteMonitor: https://radarr.${SECRET_DOMAIN}
spec:
  ingressClassName: internal
  rules:
    - host: "radarr.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
  tls:
    - hosts:
        - "radarr.${SECRET_DOMAIN}"
